# lmstudio-labkit

./: .gitignore  AGENTS.MD  AGENTS.md  README.md  pyproject.toml
docs/: LM_Studio_LabKit_Project_Spec.md  Qwen 3.5 и Qwen 3.6 Q4 для структурированных ответов.md  adaptive_local_request_owner_decisions.md  adaptive_local_request_product_architecture.md  agent-workflow.md  analysis_current_state.md  development_plan.md  gemma_family_model_cards.md  l3_13_live_matrix_readiness_plan.md  l3_15_full_matrix_preparation_plan.md  l3_15_suite_readiness_report.md  l3_20_postprocessing_task_matrix_design.md  l3_23_simple_postprocessing_product_contract.md  l3_24_simple_postprocessing_integration_adapter_plan.md  l3_25_prompt_validator_tightening.md  live_matrix_readiness_report.md  local-models-cuda-q4-canvas-article.md  local_structured_request_integration_strategy.md  mlx_models_hardware_canvas_article.md  public_api_design.md  publishable_private_benchmark_pack_contract.md  structured_matrix_design.md  Аналитический отчёт по Gemma 4 q4 и Gemma 4 QAT для структурированных запросов.md
docs/lmstudio_managed_backend_docs/: 01_model_registry_ids_and_sources.md  02_model_downloader_progress_and_errors.md  03_model_lifecycle_load_unload_context_kv.md  04_parallel_inference_single_model.md  05_prompt_cache_stateful_context_and_reuse.md  06_structured_output_json_schema_validation.md  07_lmstudio_cache_parallel_benchmark_plan.md  08_benchmark_harness_technical_spec.md  09_metrics_schema_and_result_format.md  README.md  STATS.json  (+3 more)
instructions/: AGENT.kanban.instructions.md  CORE.project_structure.instructions.md  DOCS.commit_messages.instructions.md  DOCS.instructions_style.instructions.md  INFRA.lmstudio_managed.instructions.md  SEC.publication_safety.instructions.md  TEST.testing.instructions.md
lmstudio_labkit/: __init__.py  adapters.py  artifacts.py  benchmarks.py  cli.py  datasets.py  failure_forensics.py  json_normalization.py  live_bridge.py  managed_executor.py  output_budget.py  preflight.py  privacy.py  qwen35_full_gpu.py  qwen35_full_gpu_host.py  reports.py  requests.py  review_pack.py  schema_builders.py  snapshots.py  strict_vision.py  suites.py  validation.py
scripts/: audit_publication_safety.py
tools/: lmstudio_benchmark.py
(+1259 files in other folders)
