[project]
name = "lmstudio-labkit"
version = "0.1.0a0"
description = "Standalone Python/uv lab kit for managed LM Studio experiments and backend contracts."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0.2,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "ruff>=0.9,<1",
]

[project.scripts]
lmstudio-benchmark = "tools.lmstudio_benchmark:main"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["libs/lmstudio_managed", "tools/lmstudio_lab"]
force-include = {"tools/lmstudio_benchmark.py" = "tools/lmstudio_benchmark.py"}

[tool.uv]
package = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "live: tests requiring a real LM Studio runtime or external network",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["libs", "tools", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = ["E501"]
