[project]
name = "lmstudio-labkit"
version = "0.1.0a0"
description = "Python/uv lab kit for reusable LM Studio request core and benchmark harness."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lmstudio==1.5.0",
    "pillow==11.3.0",
    "pyyaml>=6.0.2,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "ruff>=0.9,<1",
]

[project.scripts]
lmstudio-benchmark = "lmstudio_labkit.cli:main"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lmstudio_labkit", "libs/lmstudio_managed", "tools/lmstudio_lab"]
force-include = {"tools/lmstudio_benchmark.py" = "tools/lmstudio_benchmark.py"}

[tool.uv]
package = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "live: tests requiring a real LM Studio runtime or external network",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["lmstudio_labkit", "libs", "tools", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = ["E501"]
